--- a/path-finding-visualizer/index.html
+++ b/path-finding-visualizer/index.html
@@ -5,12 +5,13 @@
     <link
       rel="icon"
       type="image/svg+xml"
+      href="/path-finder.ico"
     />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Vite + React + TS</title>
+    <title>Path Finding Visualizer</title>
   </head>
   <body>
     <div id="root"></div>
